added transaction delete dialog